--- a/WBooks.xcodeproj/xcshareddata/xcschemes/WBooks.xcscheme
+++ b/WBooks.xcodeproj/xcshareddata/xcschemes/WBooks.xcscheme
@@ -23,7 +23,7 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug(production)"
+      buildConfiguration = "Debug(development)"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug(production)"
+      buildConfiguration = "Debug(development)"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release(production)"
+      buildConfiguration = "Debug(development)"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -69,10 +69,10 @@
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug(production)">
+      buildConfiguration = "Debug(development)">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release(production)"
+      buildConfiguration = "Debug(development)"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
